# parsec-improved

./: LICENSE  README.md  computePolarizationMeasure.r  computePolarizationMeasure_improved.r  congo.r  parsec.c  runC.pre_parsec_polarization.r  summary.parsec_polarization.r
data/: CONGO.txt
parsec_source/: NAMESPACE
parsec_source/R/: AF.R  AF.default.R  AF.wprof.R  AF2threshold.R  FOD.wprof.R  LE.R  LE2incidence.R  antisymmetry.R  average_ranks.R  average_ranks.cover.R  average_ranks.incidence.R  binary.R  colevels.R  colevels.cover.R  colevels.incidence.R  cover2incidence.R  cover2incidence.cover.R  depths.R  depths.cover.R  depths.incidence.R  downset.R  downset.cover.R  downset.incidence.R  drawedges.R  equivalences.cover.R  equivalences.incidence.R  evaluation.R  gen.downset.R  gen.upset.R  getlambda.R  getzeta.R  getzeta.wprof.R  height.poset.R  heights.R  heights.cover.R  idn.R  (+61 more)
ransampl-1.1/: CHANGELOG  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libtool  ransampl.pc  ransampl.pc.in
ransampl-1.1/build-aux/: ._install-sh
ransampl-1.1/demo/: ._Makefile  Makefile  Makefile.am  Makefile.in  sampling1  sampling1.c
ransampl-1.1/demo/.deps/: sampling1.Po
ransampl-1.1/demo/.libs/: sampling1
ransampl-1.1/lib/: Makefile  libransampl.la  ransampl.lo
ransampl-1.1/lib/.deps/: ransampl.Plo
ransampl-1.1/lib/.libs/: libransampl.1.dylib  libransampl.dylib  libransampl.la  libransampl.lai
ransampl-1.1/man/: ._ransampl.html  Makefile  Makefile.am  Makefile.in  ransampl.3  ransampl.html  ransampl.pod
(+58 files in other folders)
